<resources>
    <string name="app_name">ProjectAttendence</string>
    <string name="todo">TODO</string>
    <string name="password">Password</string>
    <string name="username">UserName</string>
    <string name="contact_admin">Contact Admin</string>
    <string name="signin">SignIn</string>
    <string name="forget_password">Forget Password?</string>
    <string name="show">Show</string>
    <string name="hintpassword">Password</string>
    <string name="hintusername">Username</string>
    <string name="dashboard">DASHBOARD</string>
    <string name="todo1">TODO</string>
    <string name="notifications">NOTIFICATIONS</string>
    <string name="enroll_students_in_course">enroll students in course</string>
    <string name="allocate">allocate courses to teachers</string>
    <string name="enroll">enroll_students_in_course</string>
    <string name="attendance">ATTENDANCE SYSTEM</string>
    <string name="slot_settings">SLOT SETTINGS</string>
    <string name="show_password">Show Password</string>
    <string name="showpassword">ShowPassword</string>
    <string name="enrollment">Enrollment</string>
    <string name="Allocate">Allocate</string>
    <string name="plus">+</string>
    <string name="add_new_student">Add New Student</string>
    <string name="registration_number">Registration number</string>
    <string name="add">Add</string>
    <string name="registration_no">Registration No</string>
    <string name="name">Name</string>
    <string name="course">course</string>
    <string name="Course">Course</string>
    <string name="degree">Degree</string>
    <string name="discipline">Discipline</string>
    <string name="section">Section</string>
    <string name="semester">Semester</string>
    <string name="add1">Add</string>
    <string name="cancel">Cancel</string>
    <string name="todo2">TODO</string>
    <string name="feature_set">Feature Set</string>
    <string name="time_table">Time Table</string>
    <string name="_8_30_10_00_nvp_bscs_5a">8:30-10:00 \nVP BsCS-5A</string>
    <string name="days">Days</string>
    <string name="date">Date</string>
    <string name="admin">Admin</string>
    <string name="teacher">Teacher</string>
    <string name="student">Student</string>
    <string name="parent">Parent</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Enroll_students_in_course">enroll students in course</string>
    <string name="day_and_date">Day and Date</string>
    <string name="_10_00_11_30_ndsa_bscs_3b">10:00-11:30 \nDSA BsCS-3B</string>
    <string name="submit">Submit</string>
    <string name="date_day">DATE - DAY</string>
    <string name="title_activity_drawer">Drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="child">child</string>
</resources>