<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="96dp"
        android:layout_height="39dp"
        android:text="@string/username"
        android:paddingTop="15dp"
        android:textColor="#da562b"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.165"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.303" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="105dp"
        android:layout_height="44dp"
        android:paddingTop="15dp"
        android:text="@string/password"
        android:textColor="#da562b"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.173"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.429" />

    <EditText
        android:id="@+id/username"
        android:layout_width="290dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:drawableStart="@drawable/username"
        android:ems="10"
        android:hint="@string/Username"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.438"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.364"
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="290dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:drawableStart="@drawable/key"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.429"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.496" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="115dp"
        android:layout_height="34dp"
        android:text="@string/forget_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.724" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="186dp"
        android:layout_height="174dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.028"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="97dp"
        android:layout_height="39dp"
        android:text="@string/contact_admin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.765" />

    <CheckBox
        android:id="@+id/ShowHIdePw"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:buttonTint="#da562b"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.303"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.571" />




    <TextView
        android:id="@+id/textView4"
        android:layout_width="138dp"
        android:layout_height="31dp"
        android:layout_marginTop="25dp"
        android:text="@string/showpassword"
        android:textAlignment="gravity"
        android:textColor="#da562b"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.556"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.561" />


    <Button
        android:id="@+id/signinbtn"
        android:layout_width="306dp"
        android:layout_height="57dp"
        android:backgroundTint="#da562b"
        android:text="@string/signin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.664" />


</androidx.constraintlayout.widget.ConstraintLayout>









