<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Dashboard">


    <TextView
        android:id="@+id/textView6"
        android:layout_width="423dp"
        android:layout_height="47dp"
        android:background="#da562b"
        android:text="@string/dashboard"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.583"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="104dp"
        android:layout_height="60dp"
        android:contentDescription="@string/todo1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.149"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/notibtn"
        android:layout_width="380dp"
        android:layout_height="83dp"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/noti"
        android:text="@string/notifications"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.304" />

    <Button
        android:id="@+id/enrollbtn"
        android:layout_width="381dp"
        android:layout_height="74dp"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/enroll"
        android:text="@string/Enroll_students_in_course"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.433" />

    <Button
        android:id="@+id/allocatebtn"
        android:layout_width="380dp"
        android:layout_height="83dp"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/allocate"
        android:text="@string/allocate"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.561" />

    <Button
        android:id="@+id/attendancebtn"
        android:layout_width="380dp"
        android:layout_height="83dp"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/settings"
        android:text="@string/attendance"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.69" />

    <Button
        android:id="@+id/slotbtn"
        android:layout_width="380dp"
        android:layout_height="83dp"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/settings2"
        android:text="@string/slot_settings"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.82" />

    <Button
        android:id="@+id/navigatebtn"
        android:layout_width="79dp"
        android:layout_height="52dp"
        android:backgroundTint="#da562b"
        android:drawableLeft="@drawable/menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>