<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNewStd">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="423dp"
        android:layout_height="47dp"
        android:background="#da562b"
        android:text="@string/add_new_student"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.001" />

    <EditText
        android:id="@+id/regno"
        android:layout_width="260dp"
        android:layout_height="52dp"
        android:autofillHints=""
        android:drawableStart="@drawable/regno"
        android:ems="10"
        android:hint="@string/registration_no"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.131" />


    <EditText
        android:id="@+id/name"
        android:layout_width="260dp"
        android:layout_height="52dp"
        android:autofillHints=""
        android:drawableStart="@drawable/username"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.231" />

    <TextView
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:paddingTop="15dp"
        android:text="@string/degree"
        android:textColor="#505050"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.117"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.323" />

    <Spinner
        android:id="@+id/degree"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:background="@android:drawable/btn_dropdown"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.117"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.396">

    </Spinner>

    <TextView

        android:id="@+id/textView7"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:paddingTop="15dp"
        android:text="@string/discipline"
        android:textColor="#505050"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.882"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.323" />

    <Spinner
        android:id="@+id/discipline"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:background="@android:drawable/btn_dropdown"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.882"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.396">

    </Spinner>

    <TextView

        android:layout_width="130dp"
        android:layout_height="50dp"
        android:paddingTop="15dp"
        android:text="@string/section"
        android:textColor="#505050"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.117"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.469" />

    <Spinner
        android:id="@+id/section"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:background="@android:drawable/btn_dropdown"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.117"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.543">

    </Spinner>

    <TextView

        android:id="@+id/textView5"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:paddingTop="15dp"
        android:text="@string/semester"
        android:textColor="#505050"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.882"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.469" />

    <Spinner
        android:id="@+id/semester"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:background="@android:drawable/btn_dropdown"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.882"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.543">

    </Spinner>

    <TextView
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:paddingTop="15dp"
        android:text="@string/feature_set"
        android:textColor="#505050"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.156"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.631" />

    <Button
        android:id="@+id/Cancelbtn"
        android:layout_width="95dp"
        android:layout_height="58dp"
        android:backgroundTint="#da562b"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.629"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.989" />

    <Button
        android:id="@+id/Addbtn1"
        android:layout_width="68dp"
        android:layout_height="58dp"
        android:backgroundTint="#da562b"
        android:text="@string/add1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.877"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.989" />

    <ImageView
        android:id="@+id/image1"
        android:layout_width="73dp"
        android:layout_height="77dp"
        android:contentDescription="@string/todo2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.749"
        app:srcCompat="@drawable/username" />

    <ImageView
        android:id="@+id/image2"
        android:layout_width="73dp"
        android:layout_height="77dp"
        android:contentDescription="@string/todo2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.372"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.749"
        app:srcCompat="@drawable/username" />

    <ImageView
        android:id="@+id/image3"
        android:layout_width="73dp"
        android:layout_height="77dp"
        android:contentDescription="@string/todo2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.609"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.749"
        app:srcCompat="@drawable/username" />

    <ImageView
        android:id="@+id/image43"
        android:layout_width="73dp"
        android:layout_height="77dp"
        android:contentDescription="@string/todo2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.846"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.749"
        app:srcCompat="@drawable/username" />

    <Button
        android:id="@+id/Cam"
        android:layout_width="66dp"
        android:layout_height="61dp"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/camera"


        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.878"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.868" />

    <Button
        android:id="@+id/Gallery"
        android:layout_width="66dp"
        android:layout_height="61dp"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/gallery"


        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.686"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.868" />


</androidx.constraintlayout.widget.ConstraintLayout>